--- a/REAL.css
+++ b/REAL.css
@@ -17,10 +17,12 @@
 .w {
     font-family: se;
     margin: 0 auto;
-    font-size: 18px;
+    font-size: 16px;
     text-align: right;
     margin-top: 50px;
     margin-right: 50px;
+    min-width: 600px;
+    padding: 1%;
     overflow-x: hidden;
     overflow-y: hidden;
     
