--- a/REAL.css
+++ b/REAL.css
@@ -17,12 +17,10 @@
 .w {
     font-family: se;
     margin: 0 auto;
-    font-size: 16px;
+    font-size: 14px;
     text-align: right;
-    margin-top: 50px;
-    margin-right: 50px;
-    min-width: 600px;
-    padding: 1%;
+
+    min-width: 100%;
     overflow-x: hidden;
     overflow-y: hidden;
     
