--- a/REAL.css
+++ b/REAL.css
@@ -17,9 +17,9 @@
 .w {
     font-family: se;
     margin: 0 auto;
-    font-size: 14px;
+    font-size: 16px;
     text-align: right;
-
+    margin-right: 5%;!important
     min-width: 100%;
     overflow-x: hidden;
     overflow-y: hidden;
@@ -49,7 +49,7 @@ body {
 
 #wow {
     text-align: right;
-    margin: 50px;
+    margin: 5%;
     font-family: ha;
     font-size: 50px;
 }
