--- a/REAL.css
+++ b/REAL.css
@@ -8,7 +8,9 @@
     src: url(bigbag/media/Helveticamazing.ttf);
 }
 
-
+body {
+    overscroll-behavior-y: none;
+  }
 * {
     font-family: monospace;
     color: #FFF;
@@ -23,6 +25,7 @@
     min-width: 50%;
     overflow-x: hidden;
     overflow-y: hidden;
+    user-select: none;
     
        
         background: -webkit-linear-gradient(#F8EDE3, #efe5d8);
@@ -52,8 +55,22 @@ body {
     margin: 5%;
     font-family: ha;
     font-size: 50px;
+    user-select: none;
+    
 }
 
 ::-webkit-scrollbar {
     display: none;
+}
+
+#hideAll
+{
+  position: fixed;
+  left: 0px; 
+  right: 0px; 
+  top: 0px; 
+  bottom: 0px; 
+  background-color: #495579;
+  z-index: 99; /* Higher than anything else in the document */
+
 }
