--- a/bigbag/poggers.css
+++ b/bigbag/poggers.css
@@ -1,21 +1,77 @@
 /* poggers LOL */
 
 @font-face {
-    font-family: mr-bi;
+    font-family: mr-sb;
     src: url(../monsterrat-family/Montserrat-SemiBold.ttf);
 }
 
 @font-face {
-    font-family: panton;
+    font-family: sf-he;
     src: url(media/Panton-BlackCaps.woff2);
 }
 
+@font-face {
+    font-family: ny;
+    src: url(media/NewYorkLarge-Bold.otf);
+}
+
 body {
-    font-family: mr-bi;
+    width: 100%;
+    height: 100%;
     text-align: center;
 }
 
-#GFG::before {
+h1 {
+    position: relative;
+    font-family: sf-he, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: clamp(3rem, 25vmin, 3.5rem);
+    --bg-size: 400%;
+    --color-one: #5f9ea0;
+    --color-two: #446f71;
+    background: linear-gradient(
+                  45deg,
+                  var(--color-one),
+                  var(--color-two),
+                  var(--color-one)
+                ) 0 0 / var(--bg-size) 100%;
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    animation: move-bg 8s infinite linear;
+
+    margin: 24% 5% 26%;
+    user-select: none;
+}
+
+@keyframes move-bg {
+    to {
+      background-position: var(--bg-size) 0;
+    }
+}
+
+h2 {
+    font-family: mr-sb, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+p, a {
+    font-family: mr-sb, sans-serif;
+}
+
+section {
+    padding: 2% 0
+}
+
+#scrol {
+    font-family:mr-sb, 'Courier New', Courier, monospace;
+    font-size: 1em;
+    color: grey;
+}
+
+a {
+    color:#5f9ea0;
+    text-decoration: none;
+}
+/* #GFG::before {
     content: "";
     position: absolute;
     top: 0px;
