--- a/2023/hw.css
+++ b/2023/hw.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: sohne-reg;
-    src: url(ts/Test\ Söhne/ts-b.otf);
+    src: url(ts/ts/ts-b.otf);
 }
 
 @font-face {
