--- a/2023/nav {.css
+++ b/2023/nav {.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: a;
+    src: url(ts/ts/ts-b.otf);
+}
 nav {
     display: flex;
     align-items: center;
@@ -19,12 +23,12 @@ a {
 }*/
 
 div {
-    margin: -300px 550px 100px 50px;
+    margin: -300px 0 100px 50px;
 }
 .big {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
-#small {
+.small {
     margin: 0 100px 100px 100px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: a;
 }
