--- a/hpp.css
+++ b/hpp.css
@@ -15,13 +15,14 @@
         padding: 32px;
     }
     div#hover-box {
-        height: fit-content;
+        height: fit-content;/*to fit the content to the available space*/
     }
 }
 
 :root {
     /*root is ideal for global variables*/
     --bg-color: rgb(20, 20, 20);
+    --amount: -100%;
 }
 
 body {
@@ -80,7 +81,17 @@ font-weight: bold;
     height: 250px;
     border-radius: 7.5px;
     position: relative;
+    opacity: 0;
+    transition: all 0.5s;
+    transform: translateX(-100%);
+    transition-timing-function: cubic-bezier(.32,.69,.42,.81);
 }
+
+.show {
+    opacity: 1;
+    transform: translateX(0)
+}
+
 .card:hover::before {
         opacity: 1;
     }
@@ -105,7 +116,25 @@ font-weight: bold;
 z-index: 3;
 }
 
+.card:nth-child(2) {
+    transition-delay: 100ms;
+}
 
+.card:nth-child(3) {
+    transition-delay: 200ms;
+}
+
+.card:nth-child(4) {
+    transition-delay: 300ms;
+}
+
+.card:nth-child(5) {
+    transition-delay: 400ms;
+}
+
+.card:nth-child(6) {
+    transition-delay: 600ms;
+}
 
 .card > .card-content { /*here, we layer .card-content upon the background .card to make it look like .card is .card-content's border.*/
     background-color: rgba(23, 23, 23, 1);
@@ -119,9 +148,116 @@ z-index: 3;
 
 #placeholder {
     height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    position: relative;
+
+    
+    
+        /* above gradient was referenced from Ian Forrest's https://www.gradient-animator.com/ */
+
+}
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+
+#ph-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: 0;
+    padding: 0;
+    transform: translate(-50%, -50%);
+    color: #FFF;
+    font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 3em;
+    cursor: progress;
+
+}
+
+.ph-g {
+    background: linear-gradient(90deg, #2C3333, #2E4F4F, #0E8388);
+    background-size: 400% 400%;
+
+    -webkit-animation: AnimationName 9s ease infinite;
+    -moz-animation: AnimationName 9s ease infinite;
+    animation: AnimationName 9s ease infinite;
+
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity: 1;
+    cursor: progress;
+
+}
+
+#pf-i {
+    position: absolute;
+    z-index: 999;
+    top: 100%;
+    margin: -60px 0px 30px;
+    left: calc(50% - 21.25px);
+}
+
+#ph-img {
+    height: 26px;
+    width: 42.5px;
+}
+
+#ph-video {
+max-height: 100%;
+min-width: 100%;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+opacity: 0.25;
+object-fit:fill;
+overflow: hidden;
 }
 
 a {
     position: relative;
     z-index: 999;
 }
+
+#twitch {
+    height: 100vh;
+    width: 100vw;
+    background-color: #393E46;
+}
+
+#tv {
+    aspect-ratio: 1 / 1.6;
+    border: 0.5vmin solid #00ADB5;
+    cursor: pointer;
+    position: relative;
+    width: 56vmin;
+}
+
+#list {
+    height: 42.5px;
+    width: 27px;
+}
+
+#list-of-contents{
+    z-index: 999;
+    margin: 30px 0px 30px;
+    left: calc(100% - 57px);
+    cursor: pointer;
+    position: fixed;
+}
+
+#actual-list {
+    height: 100vh;
+    width: 40vmin;
+    background-color: #000;
+    opacity: 0.5;
+    position: fixed;
+    z-index: 999;
+    transform: translateX(var(--amount));
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+
