--- a/hpp.css
+++ b/hpp.css
@@ -209,13 +209,10 @@ z-index: 3;
 #ph-video {
 max-height: 100%;
 min-width: 100%;
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
 opacity: 0.25;
 object-fit:fill;
-overflow: hidden;
+overflow-x: hidden;
+overflow-y: hidden;
 }
 
 a {
@@ -226,7 +223,7 @@ a {
 #twitch {
     height: 100vh;
     width: 100vw;
-    background-color: #393E46;
+    background-color: rgb(36, 39, 45);
 }
 
 #tv {
@@ -235,6 +232,35 @@ a {
     cursor: pointer;
     position: relative;
     width: 56vmin;
+    margin: 0;
+    padding: 0;
+    top: 50vh;
+    left: 50vw;
+    transform: translate(-50%, -50%);
+}
+
+#tv::before {
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background: linear-gradient(
+        130deg,
+        transparent 0% 33%,
+        rgb(55, 48, 107) 66%,
+        rgb(102, 52, 127) 83.5%,
+        rgb(210, 118, 133) 100%
+    );
+    background-position: 0% 0%;
+    background-size: 300% 300%;
+    transition: background-position 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    z-index: 1;
+}
+
+#tv:hover::before {
+    background-position: 100% 100%;
 }
 
 #list {
@@ -252,12 +278,33 @@ a {
 
 #actual-list {
     height: 100vh;
-    width: 40vmin;
-    background-color: #000;
-    opacity: 0.5;
+    width: clamp(400px, 40vmin, 600px);
+    background-color: rgba(0, 0, 0, .5);
     position: fixed;
     z-index: 999;
     transform: translateX(var(--amount));
     transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 }
 
+#list-content a{
+    display: block;
+    z-index: 999;
+    margin: 50px 100px 50px 0;
+}
+
+#list-content {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(0, -50%);
+
+    font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+
+
+#sb-i {
+    position: absolute;
+    transform: translateX(-80%);
+
+}
