--- a/hpp.css
+++ b/hpp.css
@@ -224,6 +224,7 @@ a {
     height: 100vh;
     width: 100vw;
     background-color: rgb(36, 39, 45);
+    position: initial;
 }
 
 #tv {
@@ -249,18 +250,23 @@ a {
     background: linear-gradient(
         130deg,
         transparent 0% 33%,
-        rgb(55, 48, 107) 66%,
-        rgb(102, 52, 127) 83.5%,
-        rgb(210, 118, 133) 100%
+        rgb(240, 138, 93) 66%,
+        rgb(184, 59, 94) 83.5%,
+        rgb(106, 44, 112) 100%
     );
     background-position: 0% 0%;
     background-size: 300% 300%;
-    transition: background-position 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: background-position 350ms ease, transform 350ms ease;
     z-index: 1;
 }
 
 #tv:hover::before {
     background-position: 100% 100%;
+    transform: scale(1.08, 1.03);
+}
+
+#tv:hover #t-content {
+    background-position: -10% 0%;
 }
 
 #list {
@@ -285,6 +291,7 @@ a {
     position: fixed;
     z-index: 999;
     transform: translateX(var(--amount));
+    visibility: unset;
     transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 }
 
@@ -303,10 +310,41 @@ a {
     font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-
-
 #sb-i {
     position: absolute;
     transform: translateX(-80%);
+}
+
+#t-content {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    background: radial-gradient(
+        rgba(255, 255, 255, .2) 8%,
+        transparent 8%
+    );
+    background-position: 0 0;
+    background-size: 5vmin 5vmin;
+    z-index: 9999;
+    transition: background-position 350ms ease;
+}
+
+#t-t {
+    font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 1em;
+    color: #FFF;
+}
+
+.t-text {
+    font-family: ts-b, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 2em;
+    padding-right: 5em;
+    color: #FFF;
+}
+
+#t-bottom {
+    position: relative;
+    top: 65%;
+    left: 35%;
 
 }
