--- a/hpp.css
+++ b/hpp.css
@@ -151,6 +151,7 @@ z-index: 3;
     width: 100vw;
     margin: 0;
     padding: 0;
+    overflow: hidden;
     position: relative;
 
     
@@ -207,12 +208,11 @@ z-index: 3;
 }
 
 #ph-video {
-max-height: 100%;
-min-width: 100%;
 opacity: 0.25;
-object-fit:fill;
-overflow-x: hidden;
-overflow-y: hidden;
+height: 100%;
+width: 177.77777778vh; /* 100 * 16 / 9 */
+min-width: 100%;
+min-height: 56.25vw; /* 100 * 9 / 16 */
 }
 
 a {
@@ -327,6 +327,8 @@ a {
     background-size: 5vmin 5vmin;
     z-index: 9999;
     transition: background-position 350ms ease;
+    overflow: auto;
+    overflow-x: hidden;
 }
 
 #t-t {
@@ -342,9 +344,27 @@ a {
     color: #FFF;
 }
 
-#t-bottom {
-    position: relative;
-    top: 65%;
-    left: 35%;
 
+.t-text-word {
+    display: inline-block; /*span has inline, so set to i-block*/
+    margin: 0 0.1em;
+    position: relative;
+    transform: translateY(40%); /*shifted downwards*/
+    transition: opacity 0ms, transform 200ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    opacity: 0;
+}
+
+#tv:hover .t-text-word {
+    transform: translateY(0%);
+    transition: opacity 0ms, transform 200ms linear;
+    opacity: 1;
+}
+
+.t-body {
+    margin: .5em 2em;
+}
+
+.t-anchor {
+    font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
 }
