--- a/hpp.css
+++ b/hpp.css
@@ -1,273 +1,62 @@
-@font-face {
-    font-family: ts-b;
-    src: url(2023/ts/ts/ts-b.otf);
-}
+/*Start of stylesheet*/
 
-@font-face {
-    font-family: ts-h;
-    src: url(2023/ts/ts/ts-h.otf);
-}
-
-@media (max-width: 840px) {
-    div#cards {
-        align-content: start;
-        overflow-y: visible;
-        padding: 32px;
-    }
-    div#hover-box {
-        height: fit-content;/*to fit the content to the available space*/
-    }
-}
-
-:root {
-    /*root is ideal for global variables*/
-    --bg-color: rgb(20, 20, 20);
-    --amount: -100%;
-}
-
-body {
-    padding: 0;
-    margin: 0; /*resetting default stylesheet*/
-    justify-content: center;
-    overflow-x: hidden;
-}
-
-#hover-box p, li {
-    color: white;
-    font-family: ts-b, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 20px 20px 0 20px;
-    margin: 0;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-    z-index: 999;
-}
-
-ol {
-    margin: 0;
-}
-
-.hb-title {
-font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
-font-weight: bold;
-}
-
-#hover-box {
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-    background-color: var(--bg-color);
-
-
-}
-
-#cards {
-    display: flex;
-    flex-wrap: wrap;
-    gap:8px;
-    max-width: 916px;
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center; /*centering the div*/
-    align-content: center; /*AAAAA FINALLY I FIXED THE FUCKING MARGIN FUCK CSS*/
-    overflow-y: hidden;
-}
-
-.card {
-    background-color: rgba(255, 255, 255, .1);
-    width: 275px;
-    height: 250px;
-    border-radius: 7.5px;
-    position: relative;
-    opacity: 0;
-    transition: all 0.5s;
-    transform: translateX(-100%);
-    transition-timing-function: cubic-bezier(.32,.69,.42,.81);
-}
-
-.show {
-    opacity: 1;
-    transform: translateX(0)
-}
-
-.card:hover::before {
-        opacity: 1;
+    @font-face {
+        font-family: ts-b;
+        src: url(2023/ts/ts/ts-b.otf);
     }
 
-.card::before {
-    position: absolute; /*making this relative to the nearest ancestor (.card)*/
-    content: '';/*for ::before*/
-    height: 100%;
-    width: 100%; /*ensure h/w = parent div*/
-    left: 0px;
-    top: 0px;
-    opacity: 0;/*by default, the opacity is zero to avoid redundant gradients. use .card:hover to set the action*/
-    transition: opacity 500ms;
-}
+    @font-face {
+        font-family: ts-h;
+        src: url(2023/ts/ts/ts-h.otf);
+    }
 
-.card::before {
-    background: radial-gradient( /*radial gradient*/
-    800px circle at var(--mouse-x) var(--mouse-y),
-    rgba(255, 255, 255,0.06),
-    transparent 40%
-);
-z-index: 3;
-}
+    @font-face {
+        font-family: tnz-bb;
+        src: url(2023/tnz/TestNewzald-BlackItalic.otf);
+    }
 
-.card:nth-child(2) {
-    transition-delay: 100ms;
-}
+    @media (max-width: 840px) {
+        div#cards {
+            align-content: start;
+            overflow-y: visible;
+            padding: 32px;
+        }
+        div#hover-box {
+            height: fit-content;/*to fit the content to the available space*/
+        }
+    }
 
-.card:nth-child(3) {
-    transition-delay: 200ms;
-}
+    :root {
+        /*root is ideal for global variables*/
+        --bg-color: rgb(20, 20, 20);
+        --amount: -100%;
+    }
 
-.card:nth-child(4) {
-    transition-delay: 300ms;
-}
+    body {
+        padding: 0;
+        margin: 0; /*resetting default stylesheet*/
+        justify-content: center;
+        overflow-x: hidden;
+    }
 
-.card:nth-child(5) {
-    transition-delay: 400ms;
-}
+    a {
+        color: white;
+        text-decoration: none;
+        position: relative;
+        z-index: 999;
+    }
 
-.card:nth-child(6) {
-    transition-delay: 600ms;
-}
-
-.card > .card-content { /*here, we layer .card-content upon the background .card to make it look like .card is .card-content's border.*/
-    background-color: rgba(23, 23, 23, 1);
-    border-radius: inherit;
-    margin: 1px;
-    width: calc(100% - 2px);
-    height: calc(100% - 2px);
-    position: absolute;
-    z-index: 2; /*for correct positioning logic (LOGIK)*/
-}
-
-#placeholder {
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    position: relative;
-
+    ol {
+        margin: 0;
+    }
     
-    
-        /* above gradient was referenced from Ian Forrest's https://www.gradient-animator.com/ */
+    p {
+        margin: 0;
+    }
 
-}
-@keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
 
-#ph-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: 0;
-    padding: 0;
-    transform: translate(-50%, -50%);
-    color: #FFF;
-    font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 3em;
-    cursor: progress;
 
-}
-
-.ph-g {
-    background: linear-gradient(90deg, #2C3333, #2E4F4F, #0E8388);
-    background-size: 400% 400%;
-
-    -webkit-animation: AnimationName 9s ease infinite;
-    -moz-animation: AnimationName 9s ease infinite;
-    animation: AnimationName 9s ease infinite;
-
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    opacity: 1;
-    cursor: progress;
-
-}
-
-#pf-i {
-    position: absolute;
-    z-index: 999;
-    top: 100%;
-    margin: -60px 0px 30px;
-    left: calc(50% - 21.25px);
-}
-
-#ph-img {
-    height: 26px;
-    width: 42.5px;
-}
-
-#ph-video {
-opacity: 0.25;
-height: 100%;
-width: 177.77777778vh; /* 100 * 16 / 9 */
-min-width: 100%;
-min-height: 56.25vw; /* 100 * 9 / 16 */
-}
-
-a {
-    position: relative;
-    z-index: 999;
-}
-
-#twitch {
-    height: 100vh;
-    width: 100vw;
-    background-color: rgb(36, 39, 45);
-    position: initial;
-}
-
-#tv {
-    aspect-ratio: 1 / 1.6;
-    border: 0.5vmin solid #00ADB5;
-    cursor: pointer;
-    position: relative;
-    width: 56vmin;
-    margin: 0;
-    padding: 0;
-    top: 50vh;
-    left: 50vw;
-    transform: translate(-50%, -50%);
-}
-
-#tv::before {
-    content: "";
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    background: linear-gradient(
-        130deg,
-        transparent 0% 33%,
-        rgb(240, 138, 93) 66%,
-        rgb(184, 59, 94) 83.5%,
-        rgb(106, 44, 112) 100%
-    );
-    background-position: 0% 0%;
-    background-size: 300% 300%;
-    transition: background-position 350ms ease, transform 350ms ease;
-    z-index: 1;
-}
-
-#tv:hover::before {
-    background-position: 100% 100%;
-    transform: scale(1.08, 1.03);
-}
-
-#tv:hover #t-content {
-    background-position: -10% 0%;
-}
+/*Nav Bar*/
 
 #list {
     height: 42.5px;
@@ -296,9 +85,9 @@ a {
 }
 
 #list-content a{
-    display: block;
+    display: inline-block;
     z-index: 999;
-    margin: 50px 100px 50px 0;
+    margin: 25px 100px 25px 0;
 }
 
 #list-content {
@@ -314,6 +103,223 @@ a {
     position: absolute;
     transform: translateX(-80%);
 }
+
+/*Docking Board*/
+
+    #placeholder {
+        height: 100vh;
+        width: 100vw;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        position: relative;
+    }
+
+    @keyframes AnimationName {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+
+    #ph-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: 0;
+        padding: 0;
+        transform: translate(-50%, -50%);
+        color: #FFF;
+        font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 3em;
+        cursor: progress;
+
+    }
+
+    .ph-g {
+        background: linear-gradient(90deg, #2C3333, #2E4F4F, #0E8388);
+        background-size: 400% 400%;
+
+        -webkit-animation: AnimationName 9s ease infinite;
+        -moz-animation: AnimationName 9s ease infinite;
+        animation: AnimationName 9s ease infinite;
+
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        opacity: 1;
+        cursor: progress;
+
+    }
+
+    #pf-i {
+        position: absolute;
+        z-index: 999;
+        top: 100%;
+        margin: -60px 0px 30px;
+        left: calc(50% - 21.25px);
+    }
+
+    #ph-img {
+        height: 26px;
+        width: 42.5px;
+    }
+
+    #ph-video {
+        opacity: .3;
+        height: 100%;
+        width: 177.77777778vh; /* 100 * 16 / 9 */
+        min-width: 100%;
+        min-height: 56.25vw; /* 100 * 9 / 16 */
+        }
+
+/*Linear Cards*/
+
+    #hover-box p, li {
+        color: white;
+        font-family: ts-b, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        padding: 20px 20px 0 20px;
+        margin: 0;
+    }
+
+    .hb-title {
+    font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
+    font-weight: bold;
+    }
+
+    #hover-box {
+        display: flex;
+        height: 100vh;
+        width: 100vw;
+        background-color: var(--bg-color);
+    }
+
+    #cards {
+        display: flex;
+        flex-wrap: wrap;
+        gap:8px;
+        max-width: 916px;
+        margin: 0 auto;
+        justify-content: center;
+        align-items: center; /*centering the div*/
+        align-content: center; /*AAAAA FINALLY I FIXED THE FUCKING MARGIN FUCK CSS*/
+        overflow-y: hidden;
+    }
+
+    .card {
+        background-color: rgba(255, 255, 255, .1);
+        width: 275px;
+        height: 250px;
+        border-radius: 7.5px;
+        position: relative;
+        opacity: 0;
+        transition: all 0.5s;
+        transform: translateX(-100%);
+        transition-timing-function: cubic-bezier(.32,.69,.42,.81);
+    }
+
+    .card:hover::before {
+            opacity: 1;
+        }
+
+    .card::before {
+        position: absolute; /*making this relative to the nearest ancestor (.card)*/
+        content: '';/*for ::before*/
+        height: 100%;
+        width: 100%; /*ensure h/w = parent div*/
+        left: 0px;
+        top: 0px;
+        opacity: 0;/*by default, the opacity is zero to avoid redundant gradients. use .card:hover to set the action*/
+        transition: opacity 500ms;
+    }
+
+    .card::before {
+        background: radial-gradient( /*radial gradient*/
+        800px circle at var(--mouse-x) var(--mouse-y),
+        rgba(255, 255, 255,0.06),
+        transparent 40%
+    );
+        z-index: 3;
+    }
+
+        .card:nth-child(2) {
+            transition-delay: 100ms;
+        }
+
+        .card:nth-child(3) {
+            transition-delay: 200ms;
+        }
+
+        .card:nth-child(4) {
+            transition-delay: 300ms;
+        }
+
+        .card:nth-child(5) {
+            transition-delay: 400ms;
+        }
+
+        .card:nth-child(6) {
+            transition-delay: 600ms;
+        }
+
+    .card > .card-content { /*here, we layer .card-content upon the background .card to make it look like .card is .card-content's border.*/
+        background-color: rgba(23, 23, 23, 1);
+        border-radius: inherit;
+        margin: 1px;
+        width: calc(100% - 2px);
+        height: calc(100% - 2px);
+        position: absolute;
+        z-index: 2; /*for correct positioning logic (LOGIK)*/
+    }
+
+/*Twitch Hover Effect*/
+
+    #twitch {
+        height: 100vh;
+        width: 100vw;
+        background-color: rgb(36, 39, 45);
+        position: initial;
+    }
+
+    #tv {
+        aspect-ratio: 1 / 1.6;
+        border: 0.5vmin solid #00ADB5;
+        cursor: pointer;
+        position: relative;
+        width: 56vmin;
+        margin: 0;
+        padding: 0;
+        top: 50vh;
+        left: 50vw;
+        transform: translate(-50%, -50%);
+    }
+
+    #tv::before {
+        content: "";
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        background: linear-gradient(
+            130deg,
+            transparent 0% 33%,
+            rgb(240, 138, 93) 66%,
+            rgb(184, 59, 94) 83.5%,
+            rgb(106, 44, 112) 100%
+        );
+        background-position: 0% 0%;
+        background-size: 300% 300%;
+        transition: background-position 350ms ease, transform 350ms ease;
+        z-index: 1;
+    }
+
+    #tv:hover::before {
+        background-position: 100% 100%;
+        transform: scale(1.08, 1.03);
+    }
+
+    #tv:hover #t-content {
+        background-position: -10% 0%;
+    }
 
 #t-content {
     position: relative;
@@ -350,7 +356,7 @@ a {
     margin: 0 0.1em;
     position: relative;
     transform: translateY(40%); /*shifted downwards*/
-    transition: opacity 0ms, transform 200ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform 200ms cubic-bezier(0.165, 0.84, 0.44, 1);
     opacity: 0;
 }
 
@@ -367,4 +373,74 @@ a {
 .t-anchor {
     font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
+}
+
+#t-credits {
+    position: relative;
+    transform: translateY(-40%);
+
+}
+
+.show {
+    opacity: 1;
+    transform: translateX(0)
+}
+
+/* Slider*/
+
+#slider {
+    height: 100vh;
+    width: 100vw;
+}
+
+.side .s-text {
+    font-size: 3em;
+    font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0 10vw;
+    padding: 0;
+    width: 80vw;
+}
+
+.side {
+    position: absolute;
+    display: grid; /*for placing at center*/
+    place-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
+#s-left {
+    background-color: rgb(38, 70, 83);
+    z-index: 2;
+    overflow: hidden;
+    width: 60%;
+}
+
+#s-right {
+    background-color: rgb(26, 95, 122);
+    overflow: hidden;
+}
+
+.s-fancy {
+    font-family: tnz-bb, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+#s-left .s-fancy {
+    color: #FFF
+}
+
+#s-right .s-fancy {
+    color: rgb(87, 197, 182)
+}
+
+#s-credits {
+    position: relative;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    top: 95%;
+    font-size: 1em;
+    color: #FFF;
 }
