--- a/docs/landing-board.css
+++ b/docs/landing-board.css
@@ -8,25 +8,36 @@
     src: url(../2023/ts/ts/ts-h.otf);
   }
 
+@media only screen and (max-width: 840px) {
+    #con {
+        flex-direction:column;
+    }
+}
 body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    height: 100vh;
+    width: 100vw;
 }
 
-img {
+img#link {
+    position: absolute;
+    z-index: 999;
+    margin: 30px;
+}
+
+img#bot {
     width: 100vw;
-    padding: 0;
-    position: fixed;
+    position: absolute;
     bottom: 0px;
-    left: 30rem;
+    left: calc(100vw/3);
     z-index: -1;
-    object-fit:contain;
+    object-fit:cover;
 }
 
 #con {
     height: 100vh;
-    margin: 0;
     padding: 20px;
     position: relative;
     display: flex;
@@ -34,6 +45,11 @@ img {
     justify-content: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     z-index: 1;
+    gap: 8px;
+}
+
+#con > a {
+    margin: 15px;
 }
 
 #check{
