--- a/hpp.css
+++ b/hpp.css
@@ -52,11 +52,29 @@
     
     p {
         margin: 0;
+        padding: 0;
     }
 
 
 
 /*Nav Bar*/
+
+.clickaway {
+    font-size: 1em;
+}
+
+.clickaway:hover {
+    border: 2px solid #fff;
+    border-radius: 5px;
+    transition: all .1s;
+    transition-timing-function:cubic-bezier(0,0,.26,.99);
+    padding: 7.5px;
+}
+
+.clickaway:not(:hover) {
+    transition: all .1s;
+    transition-timing-function:cubic-bezier(0,0,.26,.99);
+}
 
 #list {
     height: 42.5px;
@@ -104,6 +122,81 @@
     transform: translateX(-80%);
 }
 
+#cancel {
+    display: inline;
+    position: absolute;
+    margin: 5em 0 0 0;
+    cursor: pointer;
+    font-family: ts-h;
+    font-size: 2.25em;
+    transform: translateX(-6em);
+    color: #FFF;
+    transition: all .1s;
+    transition-timing-function:cubic-bezier(0,0,.26,.99);
+}
+
+#cancel:hover {
+    border: 2px solid #fff;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all .1s;
+    transition-timing-function:cubic-bezier(0,0,.26,.99);
+}
+
+@keyframes animatedgradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+/*
+.gradient-border {
+  --borderWidth: 3px;
+  background: #1D1F20;
+  position: relative;
+  border-radius: var(--borderWidth);
+}
+.gradient-border:after {
+  content: '';
+  position: absolute;
+  top: calc(-1 * var(--borderWidth));
+  left: calc(-1 * var(--borderWidth));
+  height: calc(100% + var(--borderWidth) * 2);
+  width: calc(100% + var(--borderWidth) * 2);
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  border-radius: calc(2 * var(--borderWidth));
+  z-index: -1;
+  animation: animatedgradient 3s ease alternate infinite;
+  background-size: 300% 300%;
+}
+
+
+@keyframes animatedgradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
+*/
+
+
+
+
+
+
 /*Docking Board*/
 
     #placeholder {
@@ -131,7 +224,6 @@
         color: #FFF;
         font-family: ts-h, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 3em;
-        cursor: progress;
 
     }
 
@@ -148,6 +240,19 @@
         opacity: 1;
         cursor: progress;
 
+    }
+
+    .ph-g:hover {
+    border: 5px solid #fff;
+    border-radius: 10px;
+    transition: all .1s;
+    transition-timing-function:cubic-bezier(0,0,.26,.99);
+    padding: 7.5px;
+    }
+
+    .ph-g:not(:hover) {
+        transition: all 1s;
+        transition-timing-function:cubic-bezier(0,0,.26,.99);
     }
 
     #pf-i {
