--- a/hpp.css
+++ b/hpp.css
@@ -39,6 +39,10 @@
         overflow-x: hidden;
     }
 
+    body::-webkit-scrollbar {
+        display: none;
+      }
+
     a {
         color: white;
         text-decoration: none;
