--- a/docs/landing-board.css
+++ b/docs/landing-board.css
@@ -16,6 +16,8 @@
         overflow-y:scroll;
     }
 }
+
+
 body {
     margin: 0;
     padding: 0;
@@ -75,8 +77,13 @@ a {
 
 h1, h2 {
     font-family: ts-h;
+    padding-right: 30px;
 }
 
 p, a {
     font-family: ts-b;
+}
+
+.bold {
+    font-family: ts-h;
 }
