--- a/docs/landing-board.css
+++ b/docs/landing-board.css
@@ -8,15 +8,47 @@
     src: url(../2023/ts/ts/ts-h.otf);
   }
 
+@keyframes initialDown {
+    0% {
+        transform: translateY(0px);
+    } 
+    100% {
+        transform: translateY(50px);
+    }
+}
+
+
 @media only screen and (max-width: 1060px) {
     #con {
         flex-direction:column;
+        text-align: center;
     }
     body {
         overflow-y:scroll;
     }
 }
+@media only screen and (max-width: 610px) {
+    #bot {
+        opacity: 10%;
+        transition: left 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+        transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+        left: 0%!important;
+        transform: translateY(50px);
 
+    }
+    #bot {
+        animation: 1s initialDown;
+    }
+}
+
+
+
+@media only screen and (min-width: 610px) and (max-width: 700px) {
+    #bot {
+        opacity: 100%;
+        transition: left 1s cubic-bezier(0.075, 0.82, 0.165, 1)
+    }
+}
 
 body {
     margin: 0;
@@ -43,14 +75,14 @@ img#bot {
 
 #con {
     height: 100vh;
-    padding: 20px;
+    padding: 0px;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     z-index: 1;
-    gap: 8px;
+    gap: 4px;
 }
 
 #con > a {
@@ -86,4 +118,8 @@ p, a {
 
 .bold {
     font-family: ts-h;
+}
+
+#title {
+    text-align: center;
 }
